[package]
name = "tree-sitter-sleigh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-sitter = "0.4.1"
malachite.workspace = true
regex.workspace = true
typed-builder.workspace = true

[build-dependencies]
rust-sitter-tool = "0.4.1"
malachite.workspace = true
regex.workspace = true
typed-builder.workspace = true
